RESOLVED FIXED266949
`HasScope` should not be represented as a `PseudoClass` internally
https://bugs.webkit.org/show_bug.cgi?id=266949
Summary `HasScope` should not be represented as a `PseudoClass` internally
Tim Nguyen (:ntim)
Reported 2023-12-31 05:08:48 PST
Similar to bug 252188. The only reason it was implemented as a pseudo class is because the behavior is similar. The reasons to change this: - it doesn't actually represent a pseudo class - it makes it harder to auto-generate code for PseudoClass if needed.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-31 21:42:57 PST
Tim Nguyen (:ntim)
Comment 2 2023-12-31 21:45:58 PST Comment hidden (obsolete)
Tim Nguyen (:ntim)
Comment 3 2023-12-31 21:48:52 PST
EWS
Comment 4 2024-01-01 07:03:01 PST
Committed 272554@main (d7d7358f95b5): <https://commits.webkit.org/272554@main> Reviewed commits have been landed. Closing PR #22280 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.