`HasScope` should not be represented as a `PseudoClass` internally https://bugs.webkit.org/show_bug.cgi?id=266949 rdar://120335193

Reviewed by Darin Adler.

To make auto-generating the PseudoClass enum class from JSON easier, move PseudoClass::HasScope to CSSSelector::Match since it is not actually a pseudo-class even if behaves similarly.

This "pseudo-class" represents the hidden scope in relative selectors like :has(> foo)`.

* Source/WebCore/css/CSSSelector.cpp:
(WebCore::simpleSelectorSpecificity):
(WebCore::CSSSelector::selectorText const):
* Source/WebCore/css/CSSSelector.h:
* Source/WebCore/css/SelectorChecker.cpp:
(WebCore::canMatchHoverOrActiveInQuirksMode):
(WebCore::SelectorChecker::checkOne const):
* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParser::consumeRelativeScopeSelector):
* Source/WebCore/cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::addPseudoClassType):
(WebCore::SelectorCompiler::constructFragmentsInternal):
* Source/WebCore/style/RuleSet.cpp:
(WebCore::Style::RuleSet::addRule):

Canonical link: https://commits.webkit.org/272554@main